# gl-game

./: .gitignore  CMakeLists.txt  README.md
data/shaders/: shader.fs  shader.vs
include/SFML/Window/: Window.hpp
lib/: glew32s.lib  glew32sd.lib  readme.txt  sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s.lib
src/: .clang_complete  Camera.hpp  InputManager.cpp  InputManager.hpp  Shader.cpp  Shader.hpp  main.cpp
tools/: cecho.url  colors.txt
